chore: Prevent test artifacts from being committed
Add patterns to .gitignore to exclude test screenshots and temporary files.

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ dist/
 /blob-report/
 /playwright/.cache/
 /playwright/.auth/
+
+# Screenshots and test artifacts
+Screenshot*.png
+Screenshot*.jpg
+tests/screenshots/
