--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
+    "swr": "^2.3.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
