--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-window": "^2.2.3",
     "recharts": "^3.2.1",
     "swr": "^2.3.7",
     "tailwind-merge": "^3.3.1"
