--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -30,3 +30,7 @@ python-dateutil==2.8.2
 
 # Google Calendar API
 google-api-python-client==2.115.0
+
+# Document processing (optional - for handwriting removal)
+opencv-python-headless==4.9.0.80
+PyMuPDF==1.24.0
