feat: Add quarterly termination report script
- Generates terminated students list and tutor enrollment stats per location
- Supports export to Google Sheets with OAuth authentication
- Can load from existing CSV files with --from-csv flag
- Auto-detects locations from database
- Writes only to specific columns (A:F for Reasons, A/B/E for Term Rate)

Usage:
  python3 scripts/quarterly-report/quarterly_report.py --year 2025 --quarter Q4 --export-sheets

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,8 @@ Screenshot*.png
 Screenshot*.jpg
 tests/screenshots/
 security-report.md
+
+# Google OAuth credentials (quarterly report script)
+scripts/quarterly-report/client_secrets.json
+scripts/quarterly-report/sheets_token.json
+scripts/quarterly-report/*.csv
