--- a/webapp/backend/.env.example
+++ b/webapp/backend/.env.example
@@ -11,6 +11,14 @@ DB_NAME=csm_db
 # Create OAuth 2.0 credentials at https://console.cloud.google.com/apis/credentials
 GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/api/auth/google/callback
+
+# JWT Configuration
+# Generate a secure random string for production (e.g., openssl rand -hex 32)
+JWT_SECRET_KEY=dev-secret-key-change-in-production
+
+# Frontend URL (for OAuth redirects)
+FRONTEND_URL=http://localhost:3000
 
 # Application Configuration
 ENVIRONMENT=development
