--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "framer-motion": "^12.23.24"
+    "@types/react-window": "^1.8.8",
+    "framer-motion": "^12.23.24",
+    "react-window": "^2.2.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
