--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -21,7 +21,7 @@
     "pdfjs-dist": "^5.4.449",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-window": "^2.2.3",
+    "react-window": "^2.2.6",
     "recharts": "^3.2.1",
     "swr": "^2.3.7",
     "tailwind-merge": "^3.3.1"
@@ -32,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
     "tailwindcss": "^4",
