--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -34,3 +34,11 @@ google-api-python-client==2.115.0
 # Document processing (optional - for handwriting removal)
 opencv-python-headless==4.9.0.80
 PyMuPDF==1.24.0
+
+# Testing
+pytest==8.0.0
+pytest-cov==4.1.0
+pytest-asyncio==0.23.0
+httpx==0.27.0
+factory-boy==3.3.0
+faker==22.0.0
