--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -32,6 +32,7 @@ python-dateutil==2.8.2
 google-api-python-client==2.115.0
 
 # Document processing (optional - for handwriting removal)
+numpy<2.0  # Required for opencv compatibility
 opencv-python-headless==4.9.0.80
 PyMuPDF==1.24.0
 
