--- a/webapp/frontend/cloudbuild.yaml
+++ b/webapp/frontend/cloudbuild.yaml
@@ -3,11 +3,11 @@ steps:
     args:
       - 'build'
       - '--build-arg'
-      - 'NEXT_PUBLIC_API_URL=https://tutoring-backend-284725664511.asia-east2.run.app/api'
+      - 'NEXT_PUBLIC_API_URL=/api'
       - '--build-arg'
       - 'NEXT_PUBLIC_GOOGLE_CLIENT_ID=284725664511-ctv2u8ah3pld8j72unv151jjdfffg5ne.apps.googleusercontent.com'
       - '--build-arg'
-      - 'NEXT_PUBLIC_BACKEND_URL=https://tutoring-backend-284725664511.asia-east2.run.app/api'
+      - 'NEXT_PUBLIC_BACKEND_URL=/api'
       - '-t'
       - 'asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest'
       - '.'
