--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -32,11 +32,13 @@
     "codemirror": "^6.0.2",
     "framer-motion": "^12.23.24",
     "fuse.js": "^7.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.449",
+    "perfect-freehand": "^1.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-window": "^2.2.6",
