feat: Add changelog system, version numbering, and What's New page
- Set up release-please automation (config, manifest, GitHub Action workflow)
- Seed CHANGELOG.md at v2.0.0 marking the web app generation
- Propagate app version through build pipeline (Dockerfile, cloudbuild.yaml, deploy.yml)
- Add changelog parser script (parse-changelog.ts) with tsx prebuild step
- Create What's New page (/whats-new) with version cards and section icons
- Add useUnseenUpdates hook with cross-tab localStorage sync
- Add blue dot indicator on user avatar when unseen updates exist
- Add What's New link in user menu modal and command palette
- Display version string in user menu footer

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -96,16 +96,23 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: 'projects/284725664511/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
           service_account: '284725664511-compute@developer.gserviceaccount.com'
           project_id: 'csm-database-project'
       - uses: google-github-actions/setup-gcloud@v2
+      - name: Get app version from git tag
+        id: version
+        run: |
+          VERSION=$(git describe --tags --abbrev=0 2>/dev/null | sed 's/.*-v/v/' || echo "dev")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
       - name: Build and Deploy Frontend
         run: |
           cd webapp/frontend
-          gcloud builds submit --config cloudbuild.yaml --region asia-east2 --project csm-database-project
+          gcloud builds submit --config cloudbuild.yaml --region asia-east2 --project csm-database-project --substitutions=_APP_VERSION=${{ steps.version.outputs.version }}
           gcloud run deploy tutoring-frontend \
             --image asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest \
             --region asia-east2 \
