--- a/webapp/frontend/cloudbuild.yaml
+++ b/webapp/frontend/cloudbuild.yaml
@@ -8,9 +8,13 @@ steps:
       - 'NEXT_PUBLIC_GOOGLE_CLIENT_ID=284725664511-ctv2u8ah3pld8j72unv151jjdfffg5ne.apps.googleusercontent.com'
       - '--build-arg'
       - 'NEXT_PUBLIC_BACKEND_URL=/api'
+      - '--build-arg'
+      - 'NEXT_PUBLIC_APP_VERSION=${_APP_VERSION}'
       - '-t'
       - 'asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest'
       - '.'
 images:
   - 'asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest'
 timeout: '1800s'
+substitutions:
+  _APP_VERSION: 'dev'
