--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "prebuild": "tsx scripts/parse-changelog.ts",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
@@ -63,6 +64,7 @@
     "eslint-config-next": "15.5.5",
     "jsdom": "^28.0.0",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "^4.0.18"
   }
