fix: Copy CHANGELOG.md into Docker build context for prebuild script
The prebuild script couldn't find CHANGELOG.md in Docker because the
build context is webapp/frontend/ while CHANGELOG.md lives at repo root.
Now deploy.yml copies it before submitting to Cloud Build, and the
parser checks the local directory first before falling back to repo root.

--- a/webapp/frontend/.gitignore
+++ b/webapp/frontend/.gitignore
@@ -40,6 +40,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Changelog (copied from repo root during CI build)
+CHANGELOG.md
+
 # Playwright test artifacts
 /tests/visual/screenshots/*.png
 tests/visual/screenshots/
