--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,6 +111,7 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
       - name: Build and Deploy Frontend
         run: |
+          cp CHANGELOG.md webapp/frontend/CHANGELOG.md
           cd webapp/frontend
           gcloud builds submit --config cloudbuild.yaml --region asia-east2 --project csm-database-project --substitutions=_APP_VERSION=${{ steps.version.outputs.version }}
           gcloud run deploy tutoring-frontend \
