--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-mention": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
     "@tiptap/extension-text-style": "^3.19.0",
     "@tiptap/react": "^3.19.0",
