--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/typography": "^0.5.19",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-mathematics": "^3.19.0",
     "@tiptap/extension-mention": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
     "@tiptap/extension-text-style": "^3.19.0",
@@ -35,6 +36,7 @@
     "framer-motion": "^12.23.24",
     "fuse.js": "^7.1.0",
     "jszip": "^3.10.1",
+    "katex": "^0.16.28",
     "lucide-react": "^0.546.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
