--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -38,6 +38,7 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.28",
     "lucide-react": "^0.546.0",
+    "mathlive": "^0.108.3",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
