--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -35,6 +35,7 @@
     "codemirror": "^6.0.2",
     "framer-motion": "^12.23.24",
     "fuse.js": "^7.1.0",
+    "jsxgraph": "^1.12.2",
     "jszip": "^3.10.1",
     "katex": "^0.16.28",
     "lucide-react": "^0.546.0",
