--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -22,6 +22,7 @@
     "@codemirror/view": "^6.39.12",
     "@floating-ui/react": "^0.27.16",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-code-block-lowlight": "^3.19.0",
     "@tiptap/extension-color": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-mathematics": "^3.19.0",
@@ -42,6 +43,7 @@
     "jsxgraph": "^1.12.2",
     "jszip": "^3.10.1",
     "katex": "^0.16.28",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.546.0",
     "mathlive": "^0.108.3",
     "next": "15.5.5",
