--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,7 +85,10 @@ jobs:
           gcloud run deploy tutoring-backend \
             --image asia-east2-docker.pkg.dev/csm-database-project/tutoring-backend/tutoring-backend:latest \
             --region asia-east2 \
-            --project csm-database-project
+            --project csm-database-project \
+            --cpu=0.5 \
+            --no-cpu-throttling \
+            --max-instances=1
 
   deploy-frontend:
     needs: [changes, test-frontend]
@@ -117,7 +120,8 @@ jobs:
           gcloud run deploy tutoring-frontend \
             --image asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest \
             --region asia-east2 \
-            --project csm-database-project
+            --project csm-database-project \
+            --max-instances=1
 
   summary:
     needs: [changes, deploy-backend, deploy-frontend]
