perf: Full Cloud Run cost optimization
- Move background tasks (reminders, scheduled delivery) from always-on
  lifespan loops into SSE heartbeat, so they only run while clients are
  connected. Remove --no-cpu-throttling to allow CPU billing only during
  active requests — enables scale-to-zero when idle.
- Multi-stage Dockerfile removes build tools from runtime image (~100MB).
- Split requirements.txt: test deps moved to requirements-dev.txt.
- Lazy-import numpy/cv2/fitz in document_processing for faster cold start.
- Make usePresence polling visibility-aware (stops when tab hidden).
- Clean up SSE presence dict on disconnect (memory leak fix).
- Add --timeout=900 (backend) and --timeout=60 (frontend) to deploy.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           cache: 'pip'
           cache-dependency-path: webapp/backend/requirements.txt
       - name: Install backend dependencies
-        run: pip install -r webapp/backend/requirements.txt
+        run: pip install -r webapp/backend/requirements-dev.txt
       - name: Run backend tests
         run: cd webapp/backend && pytest tests/ -v --tb=short
 
@@ -86,8 +86,8 @@ jobs:
             --image asia-east2-docker.pkg.dev/csm-database-project/tutoring-backend/tutoring-backend:latest \
             --region asia-east2 \
             --project csm-database-project \
-            --no-cpu-throttling \
-            --max-instances=1
+            --max-instances=1 \
+            --timeout=900
 
   deploy-frontend:
     needs: [changes, test-frontend]
@@ -120,7 +120,8 @@ jobs:
             --image asia-east2-docker.pkg.dev/csm-database-project/tutoring-frontend/tutoring-frontend:latest \
             --region asia-east2 \
             --project csm-database-project \
-            --max-instances=1
+            --max-instances=1 \
+            --timeout=60
 
   summary:
     needs: [changes, deploy-backend, deploy-frontend]
