--- a/webapp/backend/Dockerfile
+++ b/webapp/backend/Dockerfile
@@ -1,19 +1,28 @@
-FROM python:3.11-slim
+# Build stage: install dependencies that need compilation
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies for MySQL client
 RUN apt-get update && apt-get install -y \
     gcc \
     default-libmysqlclient-dev \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
 
-# Copy application code
+# Runtime stage: slim image without build tools
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Only runtime libs needed (no gcc/pkg-config)
+RUN apt-get update && apt-get install -y \
+    default-libmysqlclient-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY --from=builder /install /usr/local
 COPY . .
 
 # Cloud Run expects PORT environment variable (default 8080)
