security: Remove hardcoded DB IP, credentials, and binary before going public
- Replace hardcoded Cloud SQL IP ([REDACTED_IP]) with localhost default
  in database.py, run_migrations.py, config.json, and all scripts
- Replace hardcoded 'root' username with $DB_USER env var in all docs
  and scripts (coupon-quick-start, sync_coupons, etc.)
- Add cloud_sql_proxy binary to .gitignore (24MB ELF binary)
- All values now come from .env file (never committed)

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,9 @@ Screenshot*.jpg
 tests/screenshots/
 security-report.md
 
+# Cloud SQL proxy binary
+cloud_sql_proxy
+
 # Google OAuth credentials (quarterly report script)
 scripts/quarterly-report/client_secrets.json
 scripts/quarterly-report/sheets_token.json
