chore: Clean up repo for public release
- Redact CLAUDE.md: remove GCP project IDs, service accounts, Cloud Run
  URLs, Cloudflare config, and OAuth URIs (moved to local memory)
- Redact deploy/rollback skill files with $VARIABLE placeholders
- Add LICENSE (All Rights Reserved)
- Rewrite README with current features and accurate tech stack
- Remove stale directories: analysis_env/, appsheet/, backend/,
  database/analysis/, deployment/, templates/, tests/
- Remove stale files: TODO.md, FILE_STRUCTURE.md, playwright.config.ts
- Clean root package.json and remove package-lock.json
- Update .gitignore to prevent re-addition of removed directories

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,12 @@ Screenshot*.jpg
 tests/screenshots/
 security-report.md
 
+# Removed stale directories (prevent re-addition)
+backend/
+database/analysis/
+deployment/
+templates/
+
 # Cloud SQL proxy binary
 cloud_sql_proxy
 
