chore: Remove redundant boilerplate comments, fix .gitignore paths
- Remove 2 obvious AI-generated "Helper" comments
- Fix .gitignore: use /backend/ (root-only) instead of backend/ which
  was accidentally ignoring webapp/backend/

--- a/.gitignore
+++ b/.gitignore
@@ -116,10 +116,10 @@ tests/screenshots/
 security-report.md
 
 # Removed stale directories (prevent re-addition)
-backend/
-database/analysis/
-deployment/
-templates/
+/backend/
+/database/analysis/
+/deployment/
+/templates/
 
 # Cloud SQL proxy binary
 cloud_sql_proxy
