--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -22,13 +22,17 @@
     "@codemirror/view": "^6.39.12",
     "@floating-ui/react": "^0.27.16",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-character-count": "^3.19.0",
     "@tiptap/extension-code-block-lowlight": "^3.19.0",
     "@tiptap/extension-color": "^3.19.0",
+    "@tiptap/extension-highlight": "^3.19.0",
     "@tiptap/extension-image": "^3.19.0",
     "@tiptap/extension-link": "^3.19.0",
     "@tiptap/extension-mathematics": "^3.19.0",
     "@tiptap/extension-mention": "^3.19.0",
     "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/extension-subscript": "^3.19.0",
+    "@tiptap/extension-superscript": "^3.19.0",
     "@tiptap/extension-table": "^3.19.0",
     "@tiptap/extension-table-cell": "^3.19.0",
     "@tiptap/extension-table-header": "^3.19.0",
