--- a/webapp/backend/requirements.txt
+++ b/webapp/backend/requirements.txt
@@ -48,3 +48,6 @@ httpx==0.27.0
 numpy<2.0  # Required for opencv compatibility
 opencv-python-headless==4.9.0.80
 PyMuPDF==1.24.0
+
+# PDF generation (document export)
+weasyprint>=62.0
