feat: Migrate PDF export from weasyprint to Playwright headless Chromium
- Backend: replace weasyprint with playwright in requirements.txt; update
  Dockerfile to install Playwright system deps and download Chromium browser;
  rewrite pdf_export.py to use Playwright's page.pdf() with headerTemplate/
  footerTemplate (image + page number coexist in same margin overlay, fixing
  the vertical misalignment bug); pre-fetch header/footer images as base64
  (required by Playwright); load KaTeX and Noto CJK fonts via CDN links so
  math and Chinese text render correctly; pass doc.page_layout and doc.title
  from DB to generate_pdf (no extra fields needed in request body)
- Frontend: simplify buildPdfHtml (remove running() element divs — backend
  handles headers/footers via Playwright templates); simplify buildPdfExportCSS
  (remove running()/element() CSS — no longer needed with Playwright)

--- a/webapp/backend/Dockerfile
+++ b/webapp/backend/Dockerfile
@@ -17,16 +17,19 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Runtime libs (no gcc/pkg-config) + weasyprint deps (pango, cairo)
+# Runtime libs: MySQL client only (pango/cairo removed — weasyprint replaced by Playwright)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     default-libmysqlclient-dev \
-    libpango-1.0-0 libpangoft2-1.0-0 libcairo2 \
-    libgdk-pixbuf2.0-0 fontconfig libfreetype6 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy installed packages and scripts from builder
 COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
 COPY --from=builder /usr/local/bin /usr/local/bin
+
+# Install Playwright Chromium system dependencies, then download browser binary
+RUN playwright install-deps chromium
+RUN playwright install chromium
+
 COPY . .
 
 # Cloud Run expects PORT environment variable (default 8080)
