--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -22,6 +22,7 @@
     "@codemirror/view": "^6.39.12",
     "@floating-ui/react": "^0.27.16",
     "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-bubble-menu": "^3.19.0",
     "@tiptap/extension-character-count": "^3.19.0",
     "@tiptap/extension-code-block-lowlight": "^3.19.0",
     "@tiptap/extension-color": "^3.19.0",
