--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
-          cache-dependency-path: webapp/backend/requirements.txt
+          cache-dependency-path: webapp/backend/requirements-dev.txt
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r requirements-dev.txt
       - name: Run pytest
         run: pytest tests/ -v --tb=short
 
