--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -43,9 +43,11 @@
     "@tiptap/extension-underline": "^3.19.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
+    "@types/diff": "^7.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
+    "diff": "^8.0.3",
     "framer-motion": "^12.23.24",
     "fuse.js": "^7.1.0",
     "jsxgraph": "^1.12.2",
